.google/network.yaml
---
apiVersion: "networking.k8s.io/v1"
kind: Ingress
metadata:
  name: "econplaza-ingress"
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "econplaza-ip"
    networking.gke.io/managed-certificates: "econplaza-managed-cert,staging-econplaza-managed-cert,econplaza-frontend-managed-cert,staging-econplaza-frontend-managed-cert"
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/v1beta1.FrontendConfig: "econplaza-frontend-config"
spec:
  rules:
  - host: "econplaza.bebbo.link"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: econplaza-frontend-svc
              port:
                number: 80
  - host: "staging.econplaza.bebbo.link"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: staging-econplaza-frontend-svc
              port:
                number: 80

  - host: "api.econplaza.bebbo.link"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: econplaza-svc
              port:
                number: 80
  - host: "staging.api.econplaza.bebbo.link"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: staging-econplaza-svc
              port:
                number: 80
